<resources>
    <string name="app_name">Fasty Test</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_log_in">Log In</string>
    <string name="login_text_divider">OR</string>
    <string name="login_msg_two"> Do not have an account? </string>
    <string name="login_text_register">Sign up.</string>

    <string name="register_name_hint">Name</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_sign_up">Sign Up</string>
    <string name="register_msg_one">Already have an account?</string>
    <string name="register_text_log_in">Log in.</string>

    <!--español-->
    <string name="register_msg_two">registro exitoso</string>
    <string name="register_error_one">no se registro al usuario</string>
    <string name="register_msg_three">email incorrecto</string>
    <string name="register_msg_four">contraseñas no coinciden</string>

    <string name="main_exams_icon">exams</string>
    <string name="main_results_icon">results</string>
    <string name="main_notifications_icon">notifications</string>
    <string name="main_profile_icon">profile</string>

    <string name="indications_careers">carreras</string>
    <string name="indications_start_exam">start exam</string>
    <string name="indications_cancel">cancel</string>

    <string name="question_qualify">qualify</string>
    <string name="question_skip">skip</string>

    <string name="test_revise">revise</string>

    <string name="statistics_title">statistics</string>
    <string name="statistics_career">career</string>
    <string name="statistics_score">score</string>
    <string name="statistics_blank_answers">blank answers </string>
    <string name="statistics_correct_answers">correct answers</string>
    <string name="statistics_wrong_answers">wrong answers</string>
    <string name="statistics_positions">positions</string>


    <string name="position_career">career</string>
    <string name="position_condition">condition</string>
    <string name="position_merit">merit</string>
    <string name="position_position">position</string>
    <string name="position_score">score</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
